# deep-learning-playground

./: .gitignore  Data_augment.ipynb  README.md  cnn_Cifar10.ipynb  customer_churn.ipynb  dg_&_sgd.ipynb  digits_recognition_nn.ipynb  gradient_descent.ipynb  nn_from_scratch.ipynb  pyproject.toml  test.py
